_includes/css/styles-extended.css
/*
  jekyll supports sass out of the box.
  Use only when plain CSS do not suffice.
*/
$breakpoint-small:  420px;
$breakpoint-medium: 640px;
$breakpoint-large:  800px;
$breakpoint-extralarge: 1200px;

header.header,
footer.footer {
  padding: var(--space-base) 0;
  font-family: var(--font-family-sans);
  text-align: center;
}

header.header {
  margin-bottom: var(--space-double);
  border-bottom: var(--border-width) solid var(--border-color);
}

footer.footer {
  margin-top: var(--space-double);
  border-top: var(--border-width) solid var(--border-color);
}

/* title/logo */
header.header h1 {
  font-size: calc(var(--font-size) * var(--typescale-heading) * var(--typescale-heading) * var(--typescale-heading));
  font-weight: 700;
  margin-bottom: 0;
}

header.header h1 a, header.header h1 a:visited {
  color: var(--text-color-alt);
  text-decoration: none;
}

header.header h1 a:hover, header.header h1 a:active {
  color: var(--text-color);
  text-decoration: none;
  border-bottom: 2px solid var(--text-color);
}

header.header h2 {
  padding: 0;
  margin: var(--space-half) 0;

  font-size: calc(var(--font-size) * var(--typescale-heading));
  font-weight: 400;
}

header.header :is(h1, h2, h3, h4, h5, h6) {
  font-family: var(--font-family-sans);
}

/* nav links (header/footer) */
nav {
  margin: var(--space-base) 0;
  padding: 0;

  font-family: var(--font-family-sans);
  font-size: var(--font-size-smaller);
  text-transform: uppercase;
}

nav a {
  padding: 0;
  margin: 0 var(--space-half) 0 0;
  text-decoration: none;
}

nav a:hover, nav a:active {
  text-decoration: none;
  border-bottom: 2px solid var(--text-color-link-hover);
}

/* larger screens */
@media (min-width: $breakpoint-large) {
  blockquote,
  .content-extend {
    margin-left: calc(-1 * var(--space-double));
    margin-right: calc(-1 * var(--space-double));
  }
  
  figure,
  img.large,
  img.large + em {
    margin-left: calc(50% - 50vw);
    margin-right: calc(50% - 50vw);
    
    width: 100vw;
    max-width: var(--image-width-max);
    transform: translateX(calc(50vw - 50%));
  }

  img.medium,
  img.medium + em {
    margin-left: calc(-1 * var(--space-double));
    width: calc(var(--body-width) + calc(3 * var(--space-base)));
    max-width: 100vw;
  }

  img.small {
    max-width: 50%;
    height: auto;
  }

  img.small.left,
  img.small.right {
    margin-top: var(--space-half);
    margin-bottom: var(--space-base);
  }

  img.small.left  { float: left; margin-right: var(--space-base); margin-left: calc(-1 * var(--space-double)); }
  img.small.right { float: right; margin-left: var(--space-half); margin-right: calc(-1 * var(--space-double)); }
}

/* images */
/* need fix for images with hyperlinks */
img + em,
a + em.caption {
  /* similar styling to figcaption */
  display: block;
  opacity: var(--opacity-low);
  margin: calc(-1 * var(--space-half)) 0 0;
  padding: var(--space-half);
  
  font-family: var(--font-family-sans);
  font-size: var(--font-size-smaller);
  font-style: normal;
  text-align: center;

  background: var(--background-color-alt);
  border-bottom-left-radius: var(--border-radius);
  border-bottom-right-radius: var(--border-radius);
  border-bottom: 1px solid var(--border-color);
}

img.full,
img.full + em {
  position: relative;
  left: 50%;
  right: 50%;
  
  margin-left: -50vw;
  margin-right: -50vw;
  
  width: 100vw;
  max-width: 100vw;
  
  border-radius: 0;
}

/* pages */
.home_posts {
  display: flex;
  justify-content: space-between;
  align-items: center;

  margin: 0;
  padding: 0 var(--space-base);
}


/*
  articles/posts/pages lists
  list of items with a heading and lists
  DIV.items-list [h1/h2/h3 > ul/ol > li]
--------------------------------------- */
.items-list :is(h1, h2, h3, h4, h5, h6) {
  display: inline-block;
  margin: var(--space-base) var(--space-base) 0;
  padding: var(--space-quarter) var(--space-base);

  color: var(--text-color-alt);
  background: var(--background-color-alt);
  border: 1px solid var(--border-color);
  border-top-left-radius: var(--border-radius);
  border-top-right-radius: var(--border-radius);
  border-bottom: 0 none;
  
  font-size: calc(var(--font-size) * var(--typescale-heading));
}

.items-list :is(ul, ol) {
  margin: 0 0 var(--space-base) 0;
  padding: 0;
  
  background: var(--background-color);
  border: 1px solid var(--border-color);
  border-radius: var(--border-radius);
}

/*.items-list:is(ul, ol) li {}*/

.items-list :is(ul, ol) li {
  list-style: none;
  padding: calc(1.5 * var(--space-quarter)) var(--space-base);
  border-bottom: 1px solid var(--border-color);
}

.items-list :is(ul, ol) li:last-child {
  border: 0 none;
}

.items-list :is(ul, ol) li:nth-child(even) {
  background: var(--background-color-alt);
}

.items-list :is(ul, ol) time {
  margin: 0;
  padding: 0 var(--space-quarter);
  
  white-space: nowrap;
  font-family: var(--font-family-monospace);
  font-size: var(--font-size-smallest);
  color: var(--text-color-alt);
}

/* posts/articles --------------------------------------- */

.post-meta,
.post-nav {
  display: flex;
  justify-content: space-between;

  margin: 0;
  padding: var(--space-half) var(--space-base);

  background: var(--background-color-alt);
  border-radius: var(--border-radius);
  
  font-family: var(--font-family-sans);
  font-size: var(--font-size-smallest);
  text-transform: uppercase;

  opacity: var(--opacity-low);
}

.post-nav a {
  padding: var(--space-half);
  text-decoration: none;
}

/* responsive video embeds */
.video-wrap {
  position: relative;
  margin-bottom: 1em;
  padding-bottom: 56.25%;
  height: 0;
  overflow: hidden;
  max-width: 100%;

  border-radius: var(--border-radius);
}
.video-wrap :is(iframe, object, embed) {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;

  border-radius: var(--border-radius);
}


/* UTILITIES --------------------------------------- */

/* clamp content to one line */
.one-liner {
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

/* debug: attach a "?" class to debug with a blinking box */
.\? {
  animation: \?wobble 0.5s ease-in-out alternate infinite;
}
@keyframes \?wobble {
  0% { box-shadow: inset 1px 1px gold, inset -1px -1px gold; }
  100% { box-shadow: inset 5px 5px red, inset -5px -5px red; }
}

